    - update debian/patches/use-new-yasm-in-lucid.patch
  * Turn on Network Manager integration
    - update debian/vendor-gre.js
  * Don't include nsString.h in nsRegion.h, which is included by nsIWidget.h,
    used by our menubar addon. Use nsStringGlue.h instead
    - add debian/patches/no-internal-api-in-external-headers.patch
    - update debian/patches/series.in

 -- Chris Coulson <chris.coulson@canonical.com>  Tue, 28 Aug 2012 11:39:02 +0100

firefox-trunk (17.0~a1~hg20120826r103484-0ubuntu1) quantal; urgency=low

  * New upstream snapshot v17.0 A1 HG20120826R103484

  * Update globalmenu-extension to 3.5 prerelease r440
    + Fixes for LP: #1025011 - HUD search crashes Firefox when Firebug
      is installed
      - Provide our own binding for menupopup nodes which derives from the
        default binding and makes the "state" property work as if there
        were a frame
      - Make all menu nodes reference counted, and hold a strong ref when
        dispatching events, in case the event results in the removal of menu
        nodes
    + Drop the edit UI workarounds
    + Fixes for LP: #1035305 - Crash when switching apps back to Firefox
      with Firebug installed
      - Keep the menu we export in sync with the document tree all of the
        time, rather than only when the menus are on screen. The HUD likes to
        open submenus without opening any of its ancestors, which can result in
        us handling events on menu nodes that are no longer in a document
        if an ancestor responds to a bubbled-up event by removing its
        children
      - Ensure we always null check the result of nsIDocument::GetCurrentDoc
    + When tearing down a menu, make sure that we empty out our DbusmenuMenuitem
      in case the parent reuses that item for another menu. Fixes a memory leak
      and an issue where Firebug menu items are duplicated indefinitely each
      time a menu is opened